--- a/Servicio De Cejas.html
+++ b/Servicio De Cejas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
+    <link rel="icon" href="assets/logo2.ico">
     <title>Servicios De Pestañas</title>
 </head>
 <body>
