--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body>
     <!-- BARRA DE NAVEGACION -->
 
-    <header class="header">
+    <header class="header" id="navbar">
       <nav class="nav">
           <ul class="nav-links">
             <li><a href="#myCarousel">Inicio</a></li>
             <li><a href="#nosotros">Sobre nosotros</a></li>
             <li><a href="#servs">Nuestros Servicios :</a></li>
-            <li><a href="Servicios De Pestañas.html">Pestañas</a></li>
-            <li><a href="Servicio De Uñas.html">Uñas</a></li>
-            <li><a href="Servicio De Cejas.html">Cejas</a></li>
-            <li><a href="Servicio De Cosmetologia.html">Cosmetologia</a></li>
+            <li><a href="Servicios De Pestañas.php">Pestañas</a></li>
+            <li><a href="Servicio De Uñas.php">Uñas</a></li>
+            <li><a href="Servicio De Cejas.php">Cejas</a></li>
+            <li><a href="Servicio De Cosmetologia.php">Cosmetologia</a></li>
           </ul>
       </nav>
       <a href="#contacto" class="btn"><button>Contacto</button></a>
@@ -160,7 +160,7 @@
       <p>Contacto: maymolina23@gmail.com | Teléfono: (+54 9 11) 32145466</p>
       <p><a href="https://www.tuempresa.com/politica-de-privacidad">Política de privacidad</a> | <a href="https://www.tuempresa.com/terminos-y-condiciones">Términos y condiciones</a></p>
     </footer>
-
+    
     <script src="bootstrap-5.3.2-examples/assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
